# autodarkmode

./: .gitmodules  README.md  meson.build  xen.nya.autodark.json
misc/: autodarkmode.service
src/: configuration.c  configuration.h  extString.c  extString.h  main.c  meson.build  sun.c  sun.h
